<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chooseSetting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/getDifficultyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="93dp"
        android:fontFeatureSettings="smcp"
        android:text="Game Difficulty"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/difficulty_spinner"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_below="@+id/getDifficultyText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getDifficultyText"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/getSizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficulty_spinner"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="135dp"
        android:fontFeatureSettings="smcp"
        android:text="Game Size"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/size_spinner"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_below="@+id/getSizeText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getSizeText"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/difficulty_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/size_spinner"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="153dp"
        android:text="@string/proceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_spinner" />
</RelativeLayout>